fix: Refactor CSS on post images to reduce Cumulative Layout Shift

--- a/_sass/parts/_post-page.scss
+++ b/_sass/parts/_post-page.scss
@@ -444,24 +444,6 @@
   background-color: var(--body-background);
   border-radius: 10px;
   overflow: hidden;
-  animation: bounce 0.8s linear;
-  position: -1000px;
-  @keyframes bounce {
-    0% {
-      opacity: 0;
-      transform: translateY(-2000px);
-    }
-    60% {
-      opacity: 1;
-      transform: translateY(30px);
-    }
-    80% {
-      transform: translateY(-10px);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  }
 
   figure {
     position: relative;
@@ -477,10 +459,6 @@
     font-weight: 700;
     text-transform: uppercase;
     font-size: 10px;
-  }
-  .page-image {
-    width: 100%;
-    height: 100%;
   }
 }
 
